# nncombinator_cnn

./: .gitignore  Cargo.toml  README.md
src/: collection.rs  lib.rs  reshape.rs
src/device/: convolution.rs  mod.rs  pooling.rs
src/layer/: convolution.rs  mod.rs  pooling.rs
tests/: lib.rs  reshape.rs
