[package]
name = "nncombinator_cnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
rayon = "1.5.1"
libc = "0.2"
cuda-runtime-sys = "0.3.0-alpha.1"
rcudnn = "1.8.0"
rcudnn-sys = "0.5.0"
rcublas = "0.6.0"
rcublas-sys = "0.5.0"
const_guards = "0.1.3"
[dependencies.nncombinator]
path = "../nncombinator"
