[package]
name = "nncombinator_cnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
rayon = "1.5.1"
libc = "0.2"
cuda-runtime-sys = "0.3.0-alpha.1"
rcudnn = "1.8.0"
rcudnn-sys = "0.5.0"
rcublas = "0.6.0"
rcublas-sys = "0.5.0"
[dependencies.nncombinator]
path = "../nncombinator"
[dev-dependencies]
rand = "0.8.5"
rand_xorshift = "0.3.0"
statrs = "0.15.0"
rand_distr = "0.4.3"
csv = "1.1.6"
lazy_static = "1.4.0"
image = "0.24.4"
mnist = "0.5.0"
[build-dependencies]
cc = "1.0.73"
[profile.test.package."*"]
opt-level = 3
debug = true
